--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   --fontFamily: "Montserrat", sans-serif;
+  --darkMode: #1c1c21;
+  --darkModeWhites: whitesmoke;
 }
 .dark-mode {
   display: flex;
@@ -19,12 +21,26 @@
   column-gap: 5%;
   width: 150px;
 }
+.light,
+.night {
+  transition: color 5s ease;
+}
+.light.dark {
+  color: var(--darkModeWhites);
+}
+.night.dark {
+  color: var(--darkModeWhites);
+}
 .light-dark-switch {
   width: 30px;
   height: 18px;
   border: 1px solid black;
   border-radius: 50px;
   position: relative;
+  transition: border-color 5s ease;
+}
+.light-dark-switch.dark {
+  border: 1px solid var(--darkModeWhites);
 }
 .light-dark-switch::after {
   content: "";
@@ -34,13 +50,13 @@
   background-color: transparent;
   border-radius: 50px;
   top: 0px;
-  left: -45.5%;
+  left: -43%;
   box-shadow: 15px 2px 0 0 black;
   transition: left 450ms ease, box-shadow 450ms ease;
 }
 .light-dark-switch.dark::after {
   left: 24%;
-  box-shadow: 6.5px 2px 0 0 black;
+  box-shadow: 6.5px 2px 0 0 var(--darkModeWhites);
 }
 body {
   display: flex;
@@ -48,6 +64,10 @@ body {
   align-items: center;
   height: 100vh;
   font-family: var(--fontFamily);
+  transition: background-color 1s ease;
+}
+body.dark {
+  background-color: var(--darkMode);
 }
 .wrapper {
   display: flex;
@@ -58,6 +78,10 @@ body {
   width: 83%;
   height: 90%;
   margin: 0 auto;
+  transition: border-color 4s ease;
+}
+.wrapper.dark {
+  border: 1px solid var(--darkModeWhites);
 }
 header {
   width: 50%;
@@ -74,6 +98,7 @@ header button {
   bottom: -3rem;
   cursor: pointer;
 }
+
 header button.current-btn::after {
   content: "";
   position: absolute;
@@ -86,16 +111,42 @@ header button.current-btn::after {
   animation: spread;
   animation-duration: 400ms;
   animation-timing-function: ease-out;
+  transition: background-color 3s ease;
 }
-.logo {
+header button.current-btn.dark::after {
+  background-color: var(--darkModeWhites);
+}
+.logo-light {
+  opacity: 1;
   width: 100%;
   position: relative;
+  transition: opacity 3s ease;
 }
+.logo-light.dark {
+  opacity: 0;
+}
+.logo-dark {
+  opacity: 0;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  transition: opacity 3s ease;
+}
+.logo-dark.dark {
+  opacity: 1;
+}
+
 .about-btn {
   left: 1rem;
+  transition: color 3s ease;
 }
 .portfolio-btn {
   right: 1rem;
+  transition: color 3s ease;
+}
+.about-btn.dark,
+.portfolio-btn.dark {
+  color: var(--darkModeWhites);
 }
 main {
   display: flex;
@@ -111,6 +162,11 @@ main {
   line-height: 1.3rem;
   animation-name: move;
   animation-duration: 1s;
+  transition: color 3s ease;
+  transition: color 3s ease;
+}
+.about.dark {
+  color: var(--darkModeWhites);
 }
 .portfolio {
   display: none;
@@ -129,11 +185,14 @@ main {
   cursor: pointer;
   transition: opacity 250ms ease;
 }
-
 .portfolio-projects li a {
   text-decoration: none;
   color: black;
   font-size: 1.3rem;
+  transition: color 3s ease;
+}
+.portfolio-projects li a.dark {
+  color: var(--darkModeWhites);
 }
 .portfolio-projects li span {
   display: block;
@@ -141,6 +200,10 @@ main {
   font-weight: 700;
   color: rgb(0, 0, 0);
   font-style: italic;
+  transition: color 3s ease;
+}
+.portfolio-projects li span.dark {
+  color: var(--darkModeWhites);
 }
 .current-sec {
   display: block;
