--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
   top: 0px;
   left: -43%;
   box-shadow: 15px 2px 0 0 black;
-  transition: left 450ms ease, box-shadow 450ms ease;
+  transition: left 3s ease, box-shadow 450ms ease;
 }
 .light-dark-switch.dark::after {
   left: 24%;
