--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@
   display: flex;
   align-items: center;
   position: absolute;
-  top: 1.2%;
+  top: 7px;
   left: 0;
-  margin-left: 8.5%;
+  margin-left: 30px;
   font-size: 0.6rem;
   column-gap: 5%;
   width: 150px;
@@ -32,7 +32,7 @@
   color: var(--darkModeWhites);
 }
 .light-dark-switch {
-  width: 30px;
+  width: 36px;
   height: 18px;
   border: 1px solid black;
   border-radius: 50px;
@@ -50,12 +50,12 @@
   background-color: transparent;
   border-radius: 50px;
   top: 0px;
-  left: -43%;
+  left: -34%;
   box-shadow: 15px 2px 0 0 black;
   transition: left 1s ease, box-shadow 1s ease;
 }
 .light-dark-switch.dark::after {
-  left: 24%;
+  left: 40%;
   box-shadow: 6.5px 2px 0 0 var(--darkModeWhites);
 }
 body {
@@ -64,6 +64,7 @@ body {
   align-items: center;
   height: 100vh;
   font-family: var(--fontFamily);
+  padding: 30px;
   transition: background-color 1s ease;
 }
 body.dark {
@@ -75,8 +76,8 @@ body.dark {
   align-items: center;
   justify-content: space-evenly;
   border: 1px solid black;
-  width: 83%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   transition: border-color 4s ease;
 }
@@ -117,25 +118,16 @@ header button.current-btn.dark::after {
   background-color: var(--darkModeWhites);
 }
 .logo-light {
-  opacity: 1;
   width: 100%;
   position: relative;
-  transition: opacity 3s ease;
-}
-.logo-light.dark {
-  opacity: 0;
+  animation: fade 3s ease;
 }
 .logo-dark {
-  opacity: 0;
+  display: none;
   width: 100%;
-  position: absolute;
   left: 0;
-  transition: opacity 3s ease;
+  animation: fade 3s ease;
 }
-.logo-dark.dark {
-  opacity: 1;
-}
-
 .about-btn {
   left: 1rem;
   transition: color 3s ease;
@@ -235,10 +227,6 @@ main {
 }
 
 @media only screen and (min-width: 720px) {
-  .wrapper {
-    width: 86.5%;
-    height: 87%;
-  }
   header {
     width: 40%;
   }
@@ -262,16 +250,12 @@ main {
 }
 
 @media only screen and (min-width: 1024px) {
-  .wrapper {
-    width: 90%;
-    height: 87%;
-  }
   header {
     display: flex;
     justify-content: center;
     position: initial;
-    width: 100%;
-    column-gap: 10%;
+    width: 30%;
+    column-gap: 20%;
     margin: 0;
   }
   .logo {
@@ -300,10 +284,6 @@ main {
   }
 }
 @media only screen and (min-width: 1280px) {
-  .wrapper {
-    width: 93%;
-    height: 88%;
-  }
   .logo {
     width: 25%;
     position: initial;
@@ -351,5 +331,13 @@ main {
   to {
     width: 100%;
     left: 0;
+  }
+}
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
